# bn-challenge

./: README.md  pyproject.toml  requirements.txt
src/: extractor.py  main.py  matcher.py  models.py
tests/: test_extractor.py
